fix: java 8 List.of to Collections.emptyList()