@@ -1,5 +1,6 @@
 package net.pitan76.assetbridge.asset;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -10,7 +11,7 @@ import java.util.List;
 public class BridgedStateDefinition {
     public final List<BridgedProperty> properties;
 
-    private static final BridgedStateDefinition EMPTY = new BridgedStateDefinition(List.of());
+    private static final BridgedStateDefinition EMPTY = new BridgedStateDefinition(Collections.emptyList());
 
     public BridgedStateDefinition(List<BridgedProperty> properties) {
         this.properties = List.copyOf(properties);
